ALPR-52 Web: fix adding the same photo to car; fix double clicking on modify password , when editing users; remove remember me on login page; remove horizontal scrolling on all pages; fix footer to be shown correctly

--- a/alpr-web/src/app/car-list/car-list.component.css
+++ b/alpr-web/src/app/car-list/car-list.component.css
@@ -15,7 +15,7 @@
 }
 
 .car-list-section {
-  margin-bottom: 8em;
+  /*margin-bottom: 8em;*/
 }
 
 .span-icon {
