--- a/alpr-web/src/app/companies/companies.component.css
+++ b/alpr-web/src/app/companies/companies.component.css
@@ -23,6 +23,6 @@
 
 .car-list-section {
   /*margin: 10px;*/
-  margin-bottom: 100px;
+  /*margin-bottom: 100px;*/
 
 }
