--- a/alpr-web/src/app/footer/footer.component.css
+++ b/alpr-web/src/app/footer/footer.component.css
@@ -14,9 +14,9 @@ html {
 }
 
 #sticky-footer{
-  position: absolute;
-  bottom: -90px;
-  height: 90px;
+  /*position: absolute;*/
+  /*bottom: -90px;*/
+  /*height: 90px;*/
   line-height: 15px;
   text-align: center;
   background: #3f51b5;
