--- a/alpr-web/src/app/users/users.component.css
+++ b/alpr-web/src/app/users/users.component.css
@@ -15,7 +15,7 @@
 }
 
 .user-list-section{
-  margin-bottom: 8em;
+  /*margin-bottom: 8em;*/
 }
 
 mat-cell:nth-child(1),
